git反映されないのでファイル名変更

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,6 @@ services:
       - NODE_ENV=development
     volumes:
     - ./:/usr/src/app
-    command: sh -c "cd react-portfolio-site && npm start"
+    command: sh -c "cd react_portfolio && npm start"
     ports:
     - "3000:3000"
